Improve performance tests options